Fix: Se ajustó el z-index del slider

--- a/src/app/web/components/principalSlider/slider/slider.component.scss
+++ b/src/app/web/components/principalSlider/slider/slider.component.scss
@@ -127,7 +127,7 @@
 
   .main-rotator {
     position: absolute;
-    z-index: 999999;
+    z-index: 9;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
